--- a/painel.html
+++ b/painel.html
@@ -307,7 +307,7 @@
                 const d2 = new Date(dataC.getFullYear(), dataC.getMonth(), dataC.getDate());
                 const diff = Math.floor((d1 - d2) / (1000 * 60 * 60 * 24));
                 let juros = 0;
-                let detalheJuro = "Taxa Fixa 20%";
+                let detalheJuro = "MAIS TAXA";
                 let badge = "";
 
                 // Lógica de cálculo da tabela (mantida conforme original)
@@ -360,3 +360,4 @@
     </script>
 </body>
 </html>
+
